fixing env files

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-database.dsn=:memory:
-database.type=sqlite3
+database.host=localhost
+database.password=postgres
+database.user=postgres
+database.name=investment-categories
+database.sslmode=disable
+database.type=postgres
 database.debug=true
 database.autoMigrate=true
 
